Add Razor factory support to pass a model to the view.

--- a/Camp.Mvc.Swatter/Views/Home/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits System.Web.Mvc.WebViewPage 
+﻿﻿@model dynamic
 
 <html>
 <head>
@@ -6,6 +6,7 @@
     <meta charset="utf-8"/>
 </head>
 <body>
+Hello, @Model.UserName<br />
 Let's snatch some flies!
 </body>
 </html>
