Add explicit model class to inject a strong typed model to the view.

--- a/Camp.Mvc.Swatter/Views/Home/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model dynamic
+﻿﻿@model Camp.Mvc.Swatter.Models.HomeModel
 
 <html>
 <head>
@@ -6,7 +6,9 @@
     <meta charset="utf-8"/>
 </head>
 <body>
-Hello, @Model.UserName<br />
+Hello, @Model.UserName<br/>
 Let's snatch some flies!
+<hr/>
+Runs on @Model.MachineName @@ @Model.DateTime
 </body>
 </html>
