--- a/Camp.Mvc.Swatter/Views/Flies/Details.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Details.cshtml
@@ -50,7 +50,15 @@
             <dd>
                 @Html.DisplayFor(model => model.Updated)
             </dd>
-    
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Weight)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Weight)
+            </dd>
+
         </dl>
     </div>
     <p>
