--- a/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
@@ -21,6 +21,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Updated)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Weight)
+        </th>
         <th></th>
     </tr>
 
@@ -36,6 +39,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Updated)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Weight)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
