Add dropdown list for enum values.

--- a/Camp.Mvc.Swatter/Views/Flies/Create.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Create.cshtml
@@ -45,6 +45,14 @@
             </div>
     
             <div class="form-group">
+                @Html.LabelFor(model => model.Weight, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EnumDropDownListFor(model => model.Weight, "Select severity", new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Weight, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            
+            <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Create" class="btn btn-default" />
                 </div>
