Create a _ViewStart.cshtml for views of Fly controller only.

--- a/Camp.Mvc.Swatter/Views/Flies/Create.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Create.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
+    <title>@ViewBag.Title: Create</title>
 </head>
 <body>
     @using (Html.BeginForm()) 
