--- a/Camp.Mvc.Swatter/Views/Flies/Delete.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Delete.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
+    <title>@ViewBag.Title: Delete</title>
 </head>
 <body>
     <h3>Are you sure you want to delete this?</h3>
