--- a/Camp.Mvc.Swatter/Views/Flies/Edit.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Edit.cshtml
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
+    <title>@ViewBag.Title: Edit</title>
 </head>
 <body>
     @using (Html.BeginForm())
