--- a/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width"/>
-    <title>Index</title>
+    <title>@ViewBag.Title: Index</title>
 </head>
 <body>
 <p>
