Add layout page.

--- a/Camp.Mvc.Swatter/Views/Flies/Create.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Create.cshtml
@@ -1,17 +1,6 @@
 ﻿@model Camp.Mvc.Swatter.Models.Fly
+@{ ViewBag.Title = "Create New";}
 
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title: Create</title>
-</head>
-<body>
     @using (Html.BeginForm()) 
     {
         @Html.AntiForgeryToken()
@@ -63,5 +52,3 @@
     <div>
         @Html.ActionLink("Back to List", "Index")
     </div>
-</body>
-</html>
