--- a/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
@@ -1,12 +1,6 @@
 ﻿@model IEnumerable<Camp.Mvc.Swatter.Models.Fly>
-<!DOCTYPE html>
+@{ ViewBag.Title = "Flies";}
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width"/>
-    <title>@ViewBag.Title: Index</title>
-</head>
-<body>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -52,5 +46,3 @@
     }
 
 </table>
-</body>
-</html>
