--- a/Camp.Mvc.Swatter/Views/Home/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Home/Index.cshtml
@@ -1,12 +1,6 @@
 ﻿@model Camp.Mvc.Swatter.Models.HomeModel
-<!DOCTYPE html>
+@{ ViewBag.Title = "Home";}
 
-<html>
-<head>
-    <title>@ViewBag.Title: Home</title>
-    <meta charset="utf-8"/>
-</head>
-<body>
 Hello, @(Model.UserName)<br/>
 Let's snatch some flies!
 <hr/>
@@ -65,5 +59,3 @@ Thousands ways of rendering your name:<br/>
     }
     </pre>
 </p>
-</body>
-</html>
