--- a/Camp.Mvc.Swatter/Views/Flies/Delete.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Delete.cshtml
@@ -1,17 +1,6 @@
 ﻿@model Camp.Mvc.Swatter.Models.Fly
+@{ ViewBag.Title = "Delete";}
 
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title: Delete</title>
-</head>
-<body>
     <h3>Are you sure you want to delete this?</h3>
     <div>
         <h4>Fly</h4>
@@ -72,5 +61,3 @@
             </div>
         }
     </div>
-</body>
-</html>
