--- a/Camp.Mvc.Swatter/Views/_ViewStart.cshtml
+++ b/Camp.Mvc.Swatter/Views/_ViewStart.cshtml
@@ -1,4 +1,4 @@
 ﻿@{
     ViewContext.Controller.ViewBag.Title = "The Swatter";
-    Layout = "_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
