Address the home view using @Url.Action() helper.

--- a/Camp.Mvc.Swatter/Views/Shared/_Layout.cshtml
+++ b/Camp.Mvc.Swatter/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body>
 <nav>
-    @Html.ActionLink("Home", "Index", "Home") | @Html.ActionLink("Known flies", "Index", "Flies")
+    <a href="@Url.Action("Index", "Home")">&#x1f3e0; Home</a> | @Html.ActionLink("Known flies", "Index", "Flies")
 </nav>
 <hr/>
 <h2>@ViewBag.Title</h2>
