--- a/Camp.Mvc.Swatter/Views/Shared/_Layout.cshtml
+++ b/Camp.Mvc.Swatter/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>Swatter: @ViewBag.Title</title>
     <link rel="shortcut icon" type="image/ico" href="~/favicon.ico" />
     <link href="~/Styles/Site.css" rel="stylesheet" />
+    @RenderSection("css", required: false)
 </head>
 <body>
 <nav>
