--- a/Camp.Mvc.Swatter/Views/Pots/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Pots/Index.cshtml
@@ -6,6 +6,18 @@
 
 <h2>Index</h2>
 
+@if (ViewBag.Error != null)
+{
+    <div class="panel panel-danger">
+        <div class="panel-heading">
+            <h3 class="panel-title">Something went wrong.</h3>
+        </div>
+        <div class="panel-body">
+            @ViewBag.Error
+        </div>
+    </div>
+}
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
