Display Pot above fly's Detail view.

--- a/Camp.Mvc.Swatter/Views/Flies/Details.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Details.cshtml
@@ -11,6 +11,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            Pot
+        </dt>
+
+        <dd>
+            @ViewBag.PotCode
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Head)
         </dt>
 
