--- a/Camp.Mvc.Swatter/Views/Flies/Delete.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Camp.Mvc.Swatter.Models.Fly
+﻿@model Camp.Mvc.Swatter.Aggregates.FlyDetailsAggregate
 
 @{
     ViewBag.Title = "Delete";
@@ -8,58 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Fly</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Head)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Head)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Body)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Body)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Creator)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Creator)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Born)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Born)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Updated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Updated)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Weight)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Weight)
-        </dd>
-
-    </dl>
+    @Html.Partial("_FlyDetails", Model)
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
