Add a new aggregate to list all flies with pot code.

--- a/Camp.Mvc.Swatter/Views/Flies/Details.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Camp.Mvc.Swatter.Aggregates.FlyDetailsAggregate
+﻿@model Camp.Mvc.Swatter.Aggregates.Flies.FlyDetailsAggregate
 
 @{
     ViewBag.Title = "Details";
