--- a/Camp.Mvc.Swatter/Views/Flies/_FlyDetails.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/_FlyDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model Camp.Mvc.Swatter.Aggregates.FlyDetailsAggregate
+﻿@model Camp.Mvc.Swatter.Aggregates.Flies.FlyDetailsAggregate
 
 <h4>Fly</h4>
 <hr />
