--- a/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
@@ -24,6 +24,9 @@
             @Html.DisplayNameFor(model => model.Fly.Updated)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.DaysAlive)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Fly.Weight)
         </th>
         <th></th>
@@ -42,6 +45,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Fly.Updated)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DaysAlive)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Fly.Weight)
