Add extra route to comply Flies/Pot-Id request.

--- a/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
@@ -35,7 +35,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Code)
+            <a href="@Url.Action("DetailsByCode", new {code = item.Code})">@Html.DisplayFor(modelItem => item.Code)</a>
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Fly.Head)
