--- a/Camp.Mvc.Swatter/Views/Home/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Let's swat some flies &#x1F41D;</h1>
+    <p class="lead">This is the awesome adventure to discover all pot where the nasty, big and annoying flies are. It's time to get rid of them.</p>
+    <p><a href="@Url.Action("Index","Pots")" class="btn btn-primary btn-lg">Let's swat them all</a></p>
 </div>
 
 <div class="row">
