Add partial view using a controller action.

--- a/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
@@ -6,58 +6,4 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Code)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fly.Head)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fly.Creator)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fly.Updated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DaysAlive)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fly.Weight)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            <a href="@Url.Action("DetailsByCode", new {code = item.Code})">@Html.DisplayFor(modelItem => item.Code)</a>
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fly.Head)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fly.Creator)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fly.Updated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DaysAlive)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fly.Weight)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Fly.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Fly.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Fly.Id })
-        </td>
-    </tr>
-}
-
-</table>
+@Html.Partial("_FlyList", Model)
