--- a/Camp.Mvc.Swatter/Views/Flies/_FlyList.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/_FlyList.cshtml
@@ -1,9 +1,19 @@
 ﻿@model IEnumerable<Camp.Mvc.Swatter.Aggregates.Flies.FlyListAggregate>
-    
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<div class="row">
+    <div class="col-md-2">
+        @Html.ActionLink("Create New", "Create")
+    </div>
+    <div class="col-md-10 text-right" style="text-align: right;">
+        <form method="get" class="form-inline">
+            <div class="form-group">
+                <label for="searchTerm">Search:</label>
+                <input type="search" class="form-control" id="searchTerm" name="query" placeholder="Input search term" value="@ViewBag.Query">
+            </div>
+            <button type="submit" class="btn btn-default">Search for flies</button>
+        </form>
+    </div>
+</div>
 <table class="table">
     <tr>
         <th>
