--- a/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
+++ b/Camp.Mvc.Swatter/Views/Flies/Index.cshtml
@@ -1,7 +1,29 @@
-﻿@{
+﻿@model IEnumerable<Camp.Mvc.Swatter.Aggregates.Flies.FlyListAggregate>
+@{
     ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
 
-@Html.Action("IndexByProject")
+<div class="row">
+    <div class="col-md-2">
+        @Html.ActionLink("Create New", "Create")
+    </div>
+    <div class="col-md-10 text-right" style="text-align: right;">
+
+        @using (Ajax.BeginForm(
+            null,
+            null,
+            new AjaxOptions {HttpMethod = "get", InsertionMode = InsertionMode.Replace, UpdateTargetId = "fliesList"}
+            , new {@class = "form-inline"}
+            ))
+        {
+            <div class="form-group">
+                <label for="searchTerm">Search:</label>
+                <input type="search" class="form-control" id="searchTerm" name="query" placeholder="Input search term" value="@ViewBag.Query">
+            </div>
+            <button type="submit" class="btn btn-default">Search for flies</button>
+        }
+    </div>
+</div>
+@Html.Partial("_FlyList", Model)
